<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.appventanas.MainVentanasActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#A9D0F5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_word"
        android:textColor="#F78181"
        android:textSize="27sp"
        android:textStyle="bold"
        android:id="@+id/textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton1"
        android:id="@+id/btnRegistro"
        android:background="#D0A9F5"
        android:layout_margin="5dp"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton2"
        android:id="@+id/btnListas"
        android:background="#D0A9F5"
        android:layout_margin="5dp"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton3"
        android:id="@+id/btnCombo"
        android:background="#D0A9F5"
        android:layout_margin="5dp"
        android:textSize="20sp" />

</LinearLayout>
